# llm-trainer-poc

./: .gitignore  README.md  pyproject.toml
eval/: README.md  extract_responses.py  package-lock.json  package.json  promptfoo_evaluator.py  promptfooconfig.yaml  run.sh  setup.py
src/: .env.example  counter.py  inference.py  setup-env.sh
src/modules/: data_loader.py
